@@ -1,22 +1,19 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/polymer/polymer-0.3.1.ebuild,v 1.2 2005/07/09 23:04:00 weeve Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/polymer/polymer-0.3.1.ebuild,v 1.3 2005/08/23 15:26:34 greg_g Exp $
 
-inherit kde-functions
+inherit qt3
 
 DESCRIPTION="The KDE plastik theme ported to Qt"
 HOMEPAGE="http://static.int.pl/~mig21/dev/releases/polymer/"
 SRC_URI="http://static.int.pl/~mig21/dev/releases/${PN}/${P}.tar.bz2"
-
 LICENSE="GPL-2"
+
 SLOT="0"
 KEYWORDS="~amd64 ~sparc ~x86"
 IUSE="mmx sse2"
 
-DEPEND=""
-RDEPEND=""
-
-need-qt 3.3
+DEPEND="$(qt_min_version 3.3)"
 
 src_compile() {
 	local myconf
