@@ -1,6 +1,9 @@
 # ChangeLog for x11-themes/polymer
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/polymer/ChangeLog,v 1.2 2005/07/09 23:04:00 weeve Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/polymer/ChangeLog,v 1.3 2005/08/23 15:26:34 greg_g Exp $
+
+  23 Aug 2005; Gregorio Guidi <greg_g@gentoo.org> polymer-0.3.1.ebuild:
+  Port to qt3.eclass.
 
   09 Jul 2005; Jason Wever <weeve@gentoo.org> polymer-0.3.1.ebuild:
   Added ~sparc keyword.
